force-app/main/default/objects/Feature_Flag__mdt/Feature_Flag__mdt.object-meta.xml
<CustomObject>
    <description>A collection of feature flags to easily turn on/off particular sections of code.</description>
    <label>Feature Flag</label>
    <pluralLabel>Feature Flags</pluralLabel>
</CustomObject>