force-app/main/default/objects/Feature_Flag__mdt/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>What scenario is this feature flag for? If it controls functionality as part of the contact trigger, this should be "Contact Trigger". Is it instead controls whether the email handler checks for duplicates it might be "Email Handler".</description>
    <inlineHelpText>What scenario is this feature flag for? If it controls functionality as part of the contact trigger, this should be "Contact Trigger". Is it instead controls whether the email handler checks for duplicates it might be "Email Handler".</inlineHelpText>
    <label>Context</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign Trigger</fullName>
                <default>true</default>
                <label>Campaign Trigger</label>
            </value>
            <value>
                <fullName>Portal Email Trigger</fullName>
            </value>
            <value>
                <fullName>Email Message Trigger</fullName>
            </value>
            <value>
                <fullName>Attachment Trigger</fullName>
            </value>
            <value>
                <fullName>Case Trigger</fullName>
                <isActive>false</isActive>
                <label>Case Trigger</label>
            </value>
            <value>
                <fullName>Contact Trigger</fullName>
                <isActive>false</isActive>
                <label>Contact Trigger</label>
            </value>
            <value>
                <fullName>Email Handler</fullName>
                <isActive>false</isActive>
                <label>Email Handler</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>