force-app/main/default/objects/Feature_Flag__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The details about this feature, and the implications of enabling/disabling it.</description>
    <inlineHelpText>The details about this feature, and the implications of enabling/disabling it.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>