force-app/main/default/objects/Feature_Flag__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this feature enabled?</description>
    <inlineHelpText>Is this feature enabled?</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>