force-app/main/default/objects/Feature_Flag__mdt/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <description>Which feature does this toggle control?  Or, if this is the master toggle for the context, this should be the string "Master".</description>
    <inlineHelpText>Which feature does this toggle control?  Or, if this is the master toggle for the context, this should be the string "Master".</inlineHelpText>
    <label>Feature</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>