force-app/main/default/objects/Feature_Flag__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Context__c</columns>
    <columns>Feature__c</columns>
    <columns>Description__c</columns>
    <columns>Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>